--- a/package.json
+++ b/package.json
@@ -26,6 +26,13 @@
     "npm": "2.15.1"
   },
   "dependencies": {
-    "react-router": "^2.4.1"
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-react": "^6.5.0",
+    "flux": "^2.1.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-router": "^2.4.1",
+    "webpack": "^1.13.1"
   }
 }
