--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ node_modules
 
 # Ignore application configuration
 /config/application.yml
+
+
+app/assets/javascripts/bundle.js
+app/assets/javascripts/bundle.js.map
